--- a/libvsapm.ini
+++ b/libvsapm.ini
@@ -6,6 +6,29 @@ data_format: "Apple Partition Map (APM) volume system"
 documentation_url: "https://github.com/libyal/libvsapm/tree/main/documentation"
 features: ["debug_output"]
 
+[dtFabric]
+data_types: {
+    "partition_map_entry": {
+        "signature": {"debug_format": "hexadecimal"},
+        "unknown1": {"debug_format": "hexadecimal"},
+        "number_of_entries": {"usage": "in_struct"},
+        "partition_start_sector": {"usage": "in_struct"},
+        "partition_number_of_sectors": {"usage": "in_struct"},
+        "partition_name": {"usage": "in_struct"},
+        "partition_type": {"usage": "in_struct"},
+        "data_area_start_sector": {"usage": "in_struct"},
+        "data_area_number_of_sectors": {"usage": "in_struct"},
+        "status_flags": {"usage": "in_struct"},
+        "boot_code_start_sector": {},
+        "boot_code_number_of_sectors": {},
+        "unknown2": {"debug_format": "hexadecimal"},
+        "boot_code_entry_point": {},
+        "unknown3": {},
+        "boot_code_checksum": {},
+        "processor_type": {},
+        "unknown4": {"debug_format": "hexadecimal"}
+    }}
+
 [library]
 public_types: ["partition", "volume"]
 
