--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 environment:
+  pypi_token:
+    secure: VHuZiUWgTqTciKE2nsv/LiW9xUD+8LpUyE+B0PypPgKGPInZY9/bipcmvYDdv/+ssQisKzGtML6kD5aHP1oez8kJNoksg/Hy5CMoSGfdgQ1iec23mHzsKlu/hdX1tFYwoPKvI6IAjcdrU404qp/bE44qN3yDEAWH9bWAooiEFNV2wWgCOim5ZHBeGj8Hoaicq515rZnT+zMRiqPI9QgoBjdGYcwFVvrcX4P4uN6yrCgjQ9nC7u7QKnNhKfQutQ8GVS+VLfPwngTcL3zU2Q+dR8Hpn/sIva93XF5/ksYGZ1A=
   matrix:
   - TARGET: vs2008
     BUILD_ENVIRONMENT: msbuild
@@ -67,19 +69,21 @@ environment:
   - TARGET: python27-x64
     BUILD_ENVIRONMENT: python
     PYTHON: "C:\\Python27-x64\\python.exe"
-  - TARGET: python39
+  - TARGET: python310
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    PYTHON: "C:\\Python39\\python.exe"
-  - TARGET: python39-x64
+    PYTHON: "C:\\Python310\\python.exe"
+  - TARGET: python310-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    PYTHON: "C:\\Python39-x64\\python.exe"
+    PYTHON: "C:\\Python310-x64\\python.exe"
   - TARGET: python39-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos
     PYTHON: "/usr/local/opt/python@3.9/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
+    CFLAGS: "-I/usr/local/include"
+    LDFLAGS: "-L/usr/local/lib"
   - TARGET: cygwin-gcc
     BUILD_ENVIRONMENT: cygwin
     CONFIGURE_OPTIONS: ""
@@ -223,4 +227,8 @@ after_test:
 
 artifacts:
 - path: dist\*.whl
+
+deploy_script:
+- ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and $isWindows -and $env:BUILD_ENVIRONMENT -eq "python") {
+    Invoke-Expression "${env:PYTHON} -m twine upload dist/*.whl --username __token__ --password ${env:PYPI_TOKEN} --skip-existing" }
 
