--- a/libvsapm.ini
+++ b/libvsapm.ini
@@ -9,17 +9,18 @@ features: ["debug_output"]
 [dtFabric]
 data_types: {
     "partition_map_entry": {
+        "__options__": ["file_io_handle"],
         "signature": {"debug_format": "hexadecimal"},
         "unknown1": {"debug_format": "hexadecimal"},
         "number_of_entries": {"usage": "in_struct"},
-        "partition_start_sector": {"usage": "in_struct"},
-        "partition_number_of_sectors": {"usage": "in_struct"},
-        "partition_name": {"usage": "in_struct"},
-        "partition_type": {"usage": "in_struct"},
-        "data_area_start_sector": {"usage": "in_struct"},
-        "data_area_number_of_sectors": {"usage": "in_struct"},
-        "status_flags": {"usage": "in_struct"},
-        "boot_code_start_sector": {},
+        "sector_number": {"__options__": ["getter"], "usage": "in_struct"},
+        "number_of_sectors": {"__options__": ["getter"], "usage": "in_struct"},
+        "name": {"__options__": ["fixed_size", "getter"], "usage": "in_struct"},
+        "type": {"__options__": ["fixed_size", "getter"], "usage": "in_struct"},
+        "data_area_sector_number": {},
+        "data_area_number_of_sectors": {},
+        "status_flags": {"__options__": ["getter"], "usage": "in_struct"},
+        "boot_code_sector_number": {},
         "boot_code_number_of_sectors": {},
         "unknown2": {"debug_format": "hexadecimal"},
         "boot_code_entry_point": {},
