--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  pypi_token:
+  PYPI_TOKEN:
     secure: VHuZiUWgTqTciKE2nsv/LiW9xUD+8LpUyE+B0PypPgKGPInZY9/bipcmvYDdv/+ssQisKzGtML6kD5aHP1oez8kJNoksg/Hy5CMoSGfdgQ1iec23mHzsKlu/hdX1tFYwoPKvI6IAjcdrU404qp/bE44qN3yDEAWH9bWAooiEFNV2wWgCOim5ZHBeGj8Hoaicq515rZnT+zMRiqPI9QgoBjdGYcwFVvrcX4P4uN6yrCgjQ9nC7u7QKnNhKfQutQ8GVS+VLfPwngTcL3zU2Q+dR8Hpn/sIva93XF5/ksYGZ1A=
   matrix:
   - TARGET: vs2008
@@ -80,7 +80,7 @@ environment:
   - TARGET: python39-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos
-    PYTHON: "/usr/local/opt/python@3.9/bin/python3"
+    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -231,4 +231,5 @@ artifacts:
 deploy_script:
 - ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and $isWindows -and $env:BUILD_ENVIRONMENT -eq "python") {
     Invoke-Expression "${env:PYTHON} -m twine upload dist/*.whl --username __token__ --password ${env:PYPI_TOKEN} --skip-existing" }
+- sh: if test ${APPVEYOR_REPO_TAG} = "true" && test ${BUILD_ENVIRONMENT} = "python"; then ${PYTHON} -m twine upload dist/*.whl --username __token__ --password ${PYPI_TOKEN} --skip-existing; fi
 
