--- a/dpkg/control
+++ b/dpkg/control
@@ -1,7 +1,7 @@
 Source: libvsapm
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python-dev, python-setuptools, python3-dev, python3-setuptools
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python3-dev, python3-setuptools
 Standards-Version: 4.1.4
 Section: libs
 Homepage: https://github.com/libyal/libvsapm
@@ -45,23 +45,6 @@ Architecture: any
 Depends: libvsapm-tools (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libvsapm-tools
  Debugging symbols for libvsapm-tools.
-
-Package: libvsapm-python
-Section: python
-Architecture: any
-Depends: libvsapm (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Conflicts: python-libvsapm
-Replaces: python-libvsapm
-Suggests: libvsapm-python-dbg
-Description: Python 2 bindings for libvsapm
- Python 2 bindings for libvsapm.
-
-Package: libvsapm-python-dbg
-Section: debug
-Architecture: any
-Depends: libvsapm-python (= ${binary:Version}), ${misc:Depends}
-Description: Debugging symbols for libvsapm-python
- Debugging symbols for libvsapm-python.
 
 Package: libvsapm-python3
 Section: python
