--- a/Makefile.am
+++ b/Makefile.am
@@ -47,6 +47,9 @@ PKGCONFIG_FILES = \
 	libvsapm.pc.in
 
 SETUP_PY_FILES = \
+	pyproject.toml \
+	setup.cfg \
+	setup.cfg.in \
 	setup.py
 
 SPEC_FILES = \
