--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libvsapm],
- [20230915],
+ [20231013],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -191,6 +191,7 @@ AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([libvsapm/libvsapm.rc])
 AC_CONFIG_FILES([libvsapm.pc])
 AC_CONFIG_FILES([libvsapm.spec])
+AC_CONFIG_FILES([setup.cfg])
 dnl Generate a source configuration file
 AC_CONFIG_HEADERS([common/config.h])
 
