--- a/pyvsapm-python3/Makefile.am
+++ b/pyvsapm-python3/Makefile.am
@@ -62,8 +62,8 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 clean-local:
-	/bin/rm -f pyvsapm*.[ch]
+	-rm -f pyvsapm*.[ch]
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
