--- a/libvsapm.ini
+++ b/libvsapm.ini
@@ -4,7 +4,7 @@ status: "experimental"
 year_of_creation: "2009"
 data_format: "Apple Partition Map (APM) volume system"
 documentation_url: "https://github.com/libyal/libvsapm/tree/main/documentation"
-features: ["debug_output"]
+features: ["debug_output", "python_bindings", "tools"]
 
 [dtFabric]
 data_types: {
@@ -31,10 +31,12 @@ data_types: {
     }}
 
 [library]
+features: ["pthread", "wide_character_type"]
 public_types: ["partition", "volume"]
 
 [tools]
 description: "Several tools for Several tools for reading Apple Partition Map (APM) volume systems"
+features: ["info_tool"]
 names: ["vsapminfo"]
 
 [troubleshooting]
